--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -32,6 +32,12 @@
   margin-top: 0px;
   margin-bottom: 50px;
   font-family: 'Abel', sans-serif;
+  font-size: 0.7em;
+}
+
+a {
+  color: white;
+  text-decoration: underline;
 }
 
 .App-link {
@@ -49,44 +55,38 @@
 
 .container-one {
   background-color: #282c34;
-  width: 440px;
-  height: 240px;
+  width: 430px;
+  height: 230px;
+  padding: 5px;
 }
 
 .container-two {
   background-color: #282c34;
-  width: 350px;
-  height: 350px;
+  width: 340px;
+  height: 340px;
+  padding: 5px;
 }
 
-.one-one {
-  margin: 5px;
-  width: 150px;
+.columnStyle {
   float: left;
-}
-.two-one {
-  margin: 5px;
-  width: 50px;
-  float: left;
-}
-.three-one {
-  margin: 5px;
-  width: 200px;
-  float: left;
+  display: inline-block;
+  width: min-content;
 }
 
-.one-two {
-  margin: 5px;
-  width: 50px;
-  float: left;
+.painting {
+  -moz-transition: box-shadow 0.3s ease-in-out;
+  -webkit-transition: box-shadow 0.3s ease-in-out;
+  box-shadow: 0px 0px 54px -13px rgba(0,0,0,0);
+  transition: box-shadow 0.3s ease-in-out;
 }
-.two-two {
-  margin: 5px;
-  width: 140px;
-  float: left;
+
+.button {
+  border: 0px;
+  padding: 0px;
 }
-.three-two {
-  margin: 5px;
-  width: 120px;
-  float: left;
+
+.painting:hover {
+  -webkit-box-shadow: 0px 0px 54px -13px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 54px -13px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 54px -13px rgba(0,0,0,0.75);
 }
